<resources>
    <string name="app_name">SynthMark</string>
    <string name="device_information_title">Device information</string>
    <string name="test_configuration_title">Test configuration</string>
    <string name="fake_touches">Fake Touches</string>
    <string name="sustained_performance">Sustained performance</string>
    <string name="run_tests_title">Run tests</string>
    <string name="test_1">Voices</string>
    <string name="test_2">Latency</string>
    <string name="test_3">Jitter</string>
    <string name="test_4">Utilization</string>
    <string name="test_results_title">Test results</string>
    <string name="short_update">0</string>
    <string name="status_label">Status:</string>
</resources>
