<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2016 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Device information -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_information_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewDeviceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#ffc0d0e0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewShortUpdate"
                    android:text="@string/short_update" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin"
            />

        <!-- Test configuration (parameters which can be changed at runtime) -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_configuration_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:switchPadding="@dimen/activity_horizontal_margin"
                android:text="@string/fake_touches"
                android:checked="false"
                android:id="@+id/switchFakeTouches" />
            <Switch
                android:id="@+id/switchSustainedPerformance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="@dimen/activity_horizontal_margin"
                android:text="@string/sustained_performance"
                android:enabled="false"
                android:checked="false"
                />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin"
            />

        <!-- Run test buttons -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/run_tests_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerTest"
                android:layout_weight="1" />

            <Button
                android:text="Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSettingsClicked"
                android:id="@+id/buttonSettings" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="Run Test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonTest"
                android:onClick="onRunTest"
                android:layout_weight="1" />
            <Button
                android:text="Share Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonShare"
                android:onClick="onShareResult"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin"
            />

        <!-- Test output -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_results_title"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                />

            <TextView
                android:id="@+id/textViewOutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
